--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/M4TThys123/SPRINT-12-Proof-of-Concept#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "graphql.js": "^0.6.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
